Deployment für HSB aktualisiert

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       retries: 60
 
   mailoptimizer:
+    image: mailoptimizer-docker_mailoptimizer
     build:
       context: .
       args:
