Installation und Ausführung von mailoptimizer_server ist jetzt optional
Ohne WITH_CCRPC=1 ist nun nur noch die Web-Oberfläche und das REST-API offen.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       args:
         - http_proxy
         - https_proxy
+        - WITH_CCRPC
     restart: always
     links:
       - mysql
