Limit the memory consumed by the container
.. as it grows to many GBs with time.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,10 @@ services:
       - mailoptimizer:/opt/mailoptimizer
     cap_add:
       - NET_ADMIN
+    deploy:
+      resources:
+        limits:
+          memory: 2000M
 
 volumes:
   mailoptimizer:
