Neuerdings ist bei docker-compose-build das network zu verbinden
Sonst kommt keine Internet-Verbindung zustande.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
         - http_proxy
         - https_proxy
         - WITH_CCRPC
+      network: host
     restart: always
     links:
       - mysql
